tests/invalid/Parsing_Invalid_25.whiley
function f(int y) -> int:
    switch(y):
      default:
        int x = 0
    //
    return x
